Fix T45541 crash when mixing flat and smooth shaded faces in sculpt mode.

Issue from looptri merge.